BUGFIX: Toolbar Not Responsive Summary:  -With the addition of the `AddRecipe` button, the toolbar was no longer responsive.
Link to a video showing the change I made
 - https://www.loom.com/share/5addb9a6548c4cc1bab078255d892dca

Changes:
 - I converted the code for the AppBar to a component named `AppBarHead.js`
 - I changed the width of the searchbar in `SearchBar.js`from 40% to 85% so it would take up a greater amount of width
 - All other changes have been done in `index.css` because I could not find a way to implement media queries using `MakeStyles()`

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,18 @@ code {
     font-size: 1.25rem;
   }
 }
+
+@media only screen and (max-width: 959px) {
+  .ApBarRoot {
+  }
+
+  .AppBarTitle {
+    margin: auto 25% !important;
+    /* font-size: 2rem !important; */
+    text-align: center;
+  }
+
+  .AppBarButton {
+    margin-left: 25% !important;
+  }
+}
